syntax = "proto3";
package network.monitoringp.v1;

import "gogoproto/gogo.proto";
import "network/types/monitoring.proto";

option go_package = "github.com/ignite/network/x/monitoringp/types";

message MonitoringInfo {
  bool transmitted = 1;
  network.types.SignatureCounts signatureCounts = 2 [(gogoproto.nullable) = false];
}
